--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -30,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -43,12 +47,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    // Google play dependencies
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Jackson
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.1'
 
     // Network
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -66,6 +70,15 @@ dependencies {
     // Kotlin SSH libraries
     implementation 'com.jcraft:jsch:0.1.55'
     implementation 'com.hierynomus:sshj:0.32.0'
+
+    // KML Libraries
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
+    implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
+
+    // Google maps
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    // Google play dependencies
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 
 }
